# web_gpu

./: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/src/lib/web_gpu_init/: CMakeLists.txt
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/net/burkharts/web_gpu/: WebGpuPlugin.kt
example/: .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/net/burkharts/web_gpu_example/: MainActivity.kt
example/integration_test/: app_test.dart  bindings_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: web_gpu.podspec
ios/Classes/: SwiftWebGpuPlugin.swift  WebGpuPlugin.h  WebGpuPlugin.m
lib/: web_gpu.dart
lib/src/: bindings.dart  dylib.dart  init.dart
linux/: CMakeLists.txt  web_gpu_init.cc  web_gpu_plugin.cc
linux/include/web_gpu/: web_gpu_plugin.h
macos/: web_gpu.podspec
macos/Classes/: WebGpuPlugin.swift
test/: web_gpu_test.dart
windows/: CMakeLists.txt  web_gpu_init.cpp  web_gpu_plugin.cpp
windows/include/web_gpu/: web_gpu_plugin.h
windows/lib/x64/: dawn_native.dll.lib  dawn_proc.dll.lib
